[package]
name = "daily-tracker"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"

homepage = "https://github.com/dmweis/i3-conf-searcher"
repository = "https://github.com/dmweis/i3-conf-searcher"
readme = "README.md"
license = "MIT OR Apache-2.0"


[dependencies]
iced = { version = "0.3", features = ["debug"] }
thiserror = "1.0"
clap = "3.0.0-beta.1"
iced_native = "0.4"
iced_graphics = "0.2"
